# spot

./: .gitignore  Cargo.toml  README.md
reference/spot/: current-song.json  top-songs.json
src/: main.rs  spotify.rs
