[package]
name = "spot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.13"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.89"
serde = { version = "1.0.148", features = ["derive"] }
axum = "0.6.1"
anyhow = "1.0"
openssl = "0.10.43"
chrono = "0.4.19"